# Nekos

./: Cargo.toml  Makefile  README.md  banner.txt  frame1.txt  frame2.txt  justfile
.cargo/: config.toml
nekos-arch/: Cargo.toml
nekos-arch/src/: lib.rs
nekos-arch/src/riscv64/: mod.rs  sbi.rs  trap.rs
nekos-kernel/: Cargo.toml  build.rs  riscv64.ld
nekos-kernel/src/: boot.rs  exception.rs  log.rs  main.rs  misc.rs  sbi.rs  trap.rs
nekos-kernel/src/arch/: mod.rs
nekos-kernel/src/arch/riscv64/: csr.rs  mem.rs  mod.rs  sbi.rs  trap.rs
nekos-kernel/src/mem/: addr.rs  mod.rs  page_allocator.rs  pmm.rs  range_allocator.rs  vmm.rs
