[package]
name = "nekos-kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
colorz = "1.1.4"
limine = "0.5.0"
nekos-arch = { path = "../nekos-arch"}

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[[bin]]
name = "nekos-kernel"
path = "src/boot.rs"
test = false
bench = false
