[package]
name = "nekos-kernel"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = "2.10.0"
colorz = "1.1.4"
limine = "0.5.0"
nekos-arch = { path = "../nekos-arch"}
spin = "0.10.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[[bin]]
name = "nekos-kernel"
path = "src/main.rs"
test = false
bench = false
