[package]
name = "nekos-kernel"
version = "0.1.0"
edition = "2024"

[dependencies]
arrayvec = {version = "0.7.6", default-features = false}
bitflags = "2.10.0"
colorz = "1.1.4"
limine = "0.5.0"
spin = "0.10.0"
ubyte = "0.10.4"


[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[[bin]]
name = "nekos-kernel"
path = "src/main.rs"
test = false
bench = false
